[package]
name = "rust-crdt-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crdts = "7.0"
num = {version = "0.4", features = ["serde"]}
serde_json = "1.0"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
